--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "create-react-pwa",
-  "name": "Create React PWApp",
+  "short_name": "new-ant-solutions-pwa",
+  "name": "News - Ant Solutions",
   "icons": [
     {
       "src": "favicon.ico",
