--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://particles4dev-team.github.io",
   "dependencies": {
     "es6-promise": "^4.1.0",
+    "express": "^4.15.2",
     "gh-pages": "^0.12.0",
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.17.4",
