--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "express": "^4.15.2",
     "gh-pages": "^0.12.0",
     "isomorphic-fetch": "^2.2.1",
+    "localforage": "^1.5.0",
     "material-ui": "^0.17.4",
     "offline-plugin": "^4.7.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
+    "redux-saga": "^0.15.1",
     "sw-precache": "^5.1.0",
     "sw-toolbox": "^3.6.0"
   },
@@ -55,7 +59,7 @@
     "webpack": "1.14.0",
     "webpack-dev-server": "1.16.2",
     "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "2.0.2"
+    "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
     "start": "node scripts/start.js",
